logs/Slang/generated/hdlconv/hdlconvertor_p220.sv.log
name: hdlconvertor_p220
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p220.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p220.sv:1:1: error: language feature not yet supported
sequence abc;
^~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p220.sv:6:3: error: use of undeclared identifier 'abc'
@ abc $display( "Saw a-b-c" );
  ^~~
